[package]
name = "beater-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
utoipa = { workspace = true }
anyhow.workspace = true
beater-bus = { path = "../beater-bus" }
beater-core = { path = "../beater-core" }
beater-schema = { path = "../beater-schema" }
beater-store = { path = "../beater-store" }
beater-store-memory = { path = "../beater-store-memory" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
async-trait.workspace = true
beater-store-obj = { path = "../beater-store-obj" }
beater-store-sql = { path = "../beater-store-sql" }
tempfile.workspace = true
tokio.workspace = true

[lints]
workspace = true
