[package]
name = "beater-judge"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
beater-core = { path = "../beater-core" }
beater-eval = { path = "../beater-eval" }
beater-schema = { path = "../beater-schema" }
beater-secrets = { path = "../beater-secrets" }
beater-store = { path = "../beater-store" }
chrono.workspace = true
rusqlite.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true

[lints]
workspace = true
