[package]
name = "beater-judge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
utoipa = { workspace = true }
anyhow.workspace = true
async-trait.workspace = true
beater-core = { path = "../beater-core" }
beater-eval = { path = "../beater-eval" }
beater-schema = { path = "../beater-schema" }
beater-secrets = { path = "../beater-secrets" }
beater-store = { path = "../beater-store" }
chrono.workspace = true
rusqlite.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true

[lints]
workspace = true
