[package]
name = "beater-langfuse"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
beater-core = { path = "../beater-core" }
beater-schema = { path = "../beater-schema" }
beater-ingest = { path = "../beater-ingest" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
beater-store = { path = "../beater-store" }
beater-store-memory = { path = "../beater-store-memory" }
beater-store-obj = { path = "../beater-store-obj" }
beater-bus = { path = "../beater-bus" }
tempfile.workspace = true
tokio.workspace = true

[lints]
workspace = true
